--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,14 @@ on:
           - qa
           - uat
           - prod
+      change_type:
+        description: 'Choose the type of change'
+        required: false
+        default: minor
+        type: choice
+        options:
+          - major
+          - minor
 
 jobs:
   deploy-adf:
@@ -53,6 +61,12 @@ jobs:
       AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
       AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+
+  test3:
+    needs: test2
+    uses: ./.github/workflows/versioning.yml
+    with: 
+      change-type: ${{ github.event.inputs.change_type }}
 
   # deploy: 
   #   runs-on: ubuntu-latest
