--- a/.github/workflows/storageTable.yaml
+++ b/.github/workflows/storageTable.yaml
@@ -42,13 +42,22 @@ jobs:
   
       - name: Deploy Bicep Template
         run: |
-          echo "Deploying resources using Bicep"
-  
-          # Deploy the resources using the az CLI, passing the storage account details as a parameter
-          az deployment group create \
-            --resource-group "komatsupoc" \
-            --template-file ./storageTable.bicep \
-            --parameters @./bicep/parameters/${{ inputs.environment }}storageTable.json \
+              # Extract values using jq
+              resourceGroupName=$(jq -r '.resourceGroupName' ./bicep/parameters/${{inputs.environment}}storageTable.json)
+              storageAccountName1=$(jq -r '.storageAccountName1' ./bicep/parameters/${{inputs.environment}}storageTable.json)
+              tables1=$(jq -r '.tables1 | @json' ./bicep/parameters/${{inputs.environment}}storageTable.json)
+              containers1=$(jq -r '.containers1 | @json' ./bicep/parameters/${{inputs.environment}}storageTable.json)
+              storageAccountName2=$(jq -r '.storageAccountName2' ./bicep/parameters/${{inputs.environment}}storageTable.json)
+              tables2=$(jq -r '.tables2 | @json' ./bicep/parameters/${{inputs.environment}}storageTable.json)
+              containers2=$(jq -r '.containers2 | @json' ./bicep/parameters/${{inputs.environment}}storageTable.json)
+          
+              # Deploy using az CLI, passing the parameters as JSON arrays
+              az deployment group create \
+                --resource-group "komatsu-poc" \
+                --template-file ./storageTable.bicep \
+                --parameters storageAccountName1=$storageAccountName1 tables1=$tables1 containers1=$containers1 \
+                             storageAccountName2=$storageAccountName2 tables2=$tables2 containers2=$containers2
+          
           
       # - name: Insert rows into the Azure Table
       #   run: |
