--- a/.github/workflows/storageTable.yaml
+++ b/.github/workflows/storageTable.yaml
@@ -53,7 +53,7 @@ jobs:
           
               # Deploy using az CLI, passing the parameters as JSON arrays
               az deployment group create \
-                --resource-group "komatsu-poc" \
+                --resource-group "komatsupoc" \
                 --template-file ./storageTable.bicep \
                 --parameters storageAccountName1=$storageAccountName1 tables1=$tables1 containers1=$containers1 \
                              storageAccountName2=$storageAccountName2 tables2=$tables2 containers2=$containers2
