--- a/.github/workflows/servicebus.yaml
+++ b/.github/workflows/servicebus.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Deploy Bicep Template
         run: |
           serviceBusName=$(jq -r '.serviceBusName' ./bicep/parameters/servicebus.json)
-          queues=$(jq -r '.queues | map(.name) | @csv' ./bicep/parameters/servicebus.json | tr -d '"')
+          queues=$(jq -r '.queues | map(.name)' ./bicep/parameters/servicebus.json | tr -d '"')
           topic=$(jq -r '.topics[0].name' ./bicep/parameters/servicebus.json)
           subscription=$(jq -r '.subscriptions[0].name' ./bicep/parameters/servicebus.json)
 
@@ -53,6 +53,6 @@ jobs:
             --resource-group komatsupoc \
             --template-file ./servicebus.bicep \
             --parameters serviceBusName="$serviceBusName" \
-              queues="[$queues]" \
+              queues="$queues" \
               topic="$topic" \
               subscription="$subscription"
