--- a/.github/workflows/servicebus.yaml
+++ b/.github/workflows/servicebus.yaml
@@ -48,7 +48,8 @@ jobs:
           queues=$(jq '.queues | map(.name)' ./bicep/parameters/servicebus.json)
           topic=$(jq -r '.topics | map(.name)' ./bicep/parameters/servicebus.json)
           subscription=$(jq -r '.topics | map(.subscriptions)' ./bicep/parameters/servicebus.json)
-          supportOrdering=$(jq -r '.topics | map(.supportOrdering)' ./bicep/parameters/servicebus.json)
+          supportOrdering=$(jq '.topics | map(.supportOrdering)' ./bicep/parameters/servicebus.json)
+
           az deployment group create \
             --resource-group komatsupoc \
             --template-file ./servicebus.bicep \
@@ -57,3 +58,4 @@ jobs:
               topics="$topic" \
               subscriptions="$subscription" \
               supportOrdering=$supportOrdering
+
