--- a/.github/workflows/servicebus.yaml
+++ b/.github/workflows/servicebus.yaml
@@ -44,18 +44,10 @@ jobs:
       # Deploy Bicep template
       - name: Deploy Bicep Template
         run: |
-          serviceBusName=$(jq -r '.serviceBusName' ./bicep/parameters/servicebus.json)
-          queues=$(jq '.queues | map(.name)' ./bicep/parameters/servicebus.json)
-          topic=$(jq -r '.topics | map(.name)' ./bicep/parameters/servicebus.json)
-          subscription=$(jq -r '.topics | map(.subscriptions)' ./bicep/parameters/servicebus.json)
-          supportOrdering=$(jq '.topics | map(.supportOrdering)' ./bicep/parameters/servicebus.json)
+          serviceBus=$(jq -r '.serivceBus' ./bicep/parameters/servicebus.json)
 
           az deployment group create \
             --resource-group komatsupoc \
             --template-file ./servicebus.bicep \
-            --parameters serviceBusName="$serviceBusName" \
-              queues="$queues" \
-              topics="$topic" \
-              subscriptions="$subscription" \
-              supportOrdering="$supportOrdering"
+            --parameters serviceBus=$serviceBus
 
