--- a/.github/workflows/appserviceplan.yaml
+++ b/.github/workflows/appserviceplan.yaml
@@ -1,10 +1,20 @@
 name: Deploy App Service Plan to Azure
 
 on:
-  push:
-    branches:
-      - main
-
+  workflow_call:
+    inputs:
+      environment:
+        required: true
+        type: string
+    secrets:
+      AZURE_CLIENT_ID:
+        required: true
+      AZURE_CLIENT_SECRET:
+        required: true
+      AZURE_SUBSCRIPTION_ID:
+        required: true
+      AZURE_TENANT_ID:
+        required: true
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -30,4 +40,6 @@ jobs:
         az deployment group create \
           --resource-group "komatsupoc" \
           --template-file ./appservice.bicep \
-          --parameters appServicePlanName=appServicexxx
+          --parameters appServicePlanName=appServicexxx\
+                        aseName=aseName\
+
