--- a/.github/workflows/storageTable.yaml
+++ b/.github/workflows/storageTable.yaml
@@ -43,14 +43,14 @@ jobs:
       - name: Deploy Bicep Template
         run: |
               # Extract values using jq
-              resourceGroupName=$(jq -r '.resourceGroupName' ./bicep/parameters/${{inputs.environment}}storageTable.json)
+              #resourceGroupName=$(jq -r '.resourceGroupName' ./bicep/parameters/${{inputs.environment}}storageTable.json)
               storageAccounts=$(jq -r '.storageAccounts' ./bicep/parameters/${{inputs.environment}}storageTable.json)
           
               # Deploy using az CLI, passing the parameters as JSON arrays
               az deployment group create \
                 --resource-group "komatsupoc" \
                 --template-file ./storageTable.bicep \
-                --parameters storageAccouns="$storageAccounts" \
+                --parameters storageAccounts="$storageAccounts" \
           
           
       # - name: Insert rows into the Azure Table
