--- a/.github/workflows/servicebus.yaml
+++ b/.github/workflows/servicebus.yaml
@@ -45,9 +45,9 @@ jobs:
       - name: Deploy Bicep Template
         run: |
           serviceBusName=$(jq -r '.serivceBus[0].serviceBusName' ./bicep/parameters/${{inputs.environment}}storageTable.json)
-          queues=$(jq -c '.serivceBus[0].queues' ./bicep/parameters/${{inputs.environment}}storageTable.json)
-          topics=$(jq -c '.serivceBus[0].topics' ./bicep/parameters/${{inputs.environment}}storageTable.json)
-          tags=$(jq -c '.serivceBus[0].tags' ./bicep/parameters/${{inputs.environment}}storageTable.json)
+          queues=$(jq -r '.serivceBus[0].queues' ./bicep/parameters/${{inputs.environment}}storageTable.json)
+          topics=$(jq -r '.serivceBus[0].topics' ./bicep/parameters/${{inputs.environment}}storageTable.json)
+          tags=$(jq -r '.serivceBus[0].tags' ./bicep/parameters/${{inputs.environment}}storageTable.json)
           
           # Deploy using Bicep
           az deployment group create \
