--- a/.github/workflows/servicebus.yaml
+++ b/.github/workflows/servicebus.yaml
@@ -44,10 +44,10 @@ jobs:
       # Deploy Bicep template
       - name: Deploy Bicep Template
         run: |
-          serviceBusName=$(jq -r '.serivceBus[0].serviceBusName' ./bicep/parameters/${{inputs.environment}}storageTable.json)
-          queues=$(jq -r '.serivceBus[0].queues' ./bicep/parameters/${{inputs.environment}}storageTable.json)
-          topics=$(jq -r '.serivceBus[0].topics' ./bicep/parameters/${{inputs.environment}}storageTable.json)
-          tags=$(jq -r '.serivceBus[0].tags' ./bicep/parameters/${{inputs.environment}}storageTable.json)
+          serviceBusName=$(jq -r '.serivceBus[0].serviceBusName' ./bicep/parameters/servicebus.json)
+          queues=$(jq -r '.serivceBus[0].queues' ./bicep/parameters/servicebus.json)
+          topics=$(jq -r '.serivceBus[0].topics' ./bicep/parameters/servicebus.json)
+          tags=$(jq -r '.serivceBus[0].tags' ./bicep/parameters/servicebus.json)
           
           # Deploy using Bicep
           az deployment group create \
