--- a/.github/workflows/storageTable.yaml
+++ b/.github/workflows/storageTable.yaml
@@ -44,7 +44,7 @@ jobs:
         run: |
               # Extract values using jq
               #resourceGroupName=$(jq -r '.resourceGroupName' ./bicep/parameters/${{inputs.environment}}storageTable.json)
-              storageAccounts=$(jq '.storageAccounts' ./bicep/parameters/${{inputs.environment}}storageTable.json)
+              storageAccounts=$(jq -r '.storageAccounts' ./bicep/parameters/${{inputs.environment}}storageTable.json)
           
               # Deploy using az CLI, passing the parameters as JSON arrays
               az deployment group create \
