--- a/.github/workflows/servicebus.yaml
+++ b/.github/workflows/servicebus.yaml
@@ -48,7 +48,7 @@ jobs:
           queues=$(jq -r '.serivceBus[0].queues' ./bicep/parameters/servicebus.json)
           topics=$(jq -r '.serivceBus[0].topics | tojson' ./bicep/parameters/servicebus.json)
           tags=$(jq -r '.serivceBus[0].tags' ./bicep/parameters/servicebus.json)
-          subs=$(jq -r '.serivceBus[0].topics.subscriptions' ./bicep/parameters/servicebus.json)
+          subscriptions=$(jq -r '.serivceBus[0].topics | to_entries | map({topicName: .key, subscriptions: .value.subscriptions}) | .[].subscriptions | map({topicName: .topic, subscriptionName: .subscriptionName}) | tojson' ./bicep/parameters/servicebus.json)
           # Deploy using Bicep
           az deployment group create \
             --resource-group "komatsupoc" \
@@ -57,5 +57,5 @@ jobs:
                           queues="$queues" \
                           topics="$topics" \
                           tags="$tags" \
-                          subscriptions="$subs"
+                          subscriptions="$subscriptions"
 
