--- a/.github/workflows/storageTable.yaml
+++ b/.github/workflows/storageTable.yaml
@@ -45,8 +45,9 @@ jobs:
               # Extract values using jq
               #resourceGroupName=$(jq -r '.resourceGroupName' ./bicep/parameters/${{inputs.environment}}storageTable.json)
               storageAccounts=$(jq -r '.storageAccounts' ./bicep/parameters/${{inputs.environment}}storageTable.json)
-              tables=$(jq -r '.tables | to_entries | map(.tables) | flatten | map({tableName: .tableName, storageaccountName: .storageaccount}) | tojson' ./bicep/parameters/${{inputs.environment}}storageTable.json)
-              containers=$(jq -r '.containers | to_entries | map(.containers) | flatten | map({containerName: .containerName, storageaccountName: .storageaccount}) | tojson' ./bicep/parameters/${{inputs.environment}}storageTable.json)
+              tables=$(jq -r '.tables | map({tableName: .tableName, storageaccountName: .storageaccount}) | tojson' ./bicep/parameters/${{inputs.environment}}storageTable.json)
+              containers=$(jq -r '.containers | map({containerName: .containerName, storageaccountName: .storageaccount}) | tojson' ./bicep/parameters/${{inputs.environment}}storageTable.json)
+
               echo "storageAccounts: $storageAccounts"
               echo "tables: $tables"
               # Deploy using az CLI, passing the parameters as JSON arrays
